	- Explosive beehive submunition explosion FX now scaled based on submunition tntMass, not parent HE VFX.
	- Fix weapons with reload animations adding an extra 1-20s to the reload time, based on fire anim length.
	- Add new 'postFireChargeAnim' field for weapons with charge animations to specify if the animation should play in reverse to deactivate the weapon after firing.
	- Missiles:
		-Add 'cruiseRangeTrigger' field to Missiles. Missiles using this will delay firing Cruise motor until within set distance to target.
- RWP:
	- For S6R10, GM kill craft that lack propulsion and are significantly beyond the asteroid field radius.
	- Adjust attraction of asteroids beyond 90% of the field radius to not clump together at the centre so that they don't kill the sole surviving craft.

v1.7.1.0
IMPROVEMENTS / FIXES
- General:
	- Add a SimpleRepaint MM patch to ignore incompatible parts.
	- Fix typos and duplicates in the changelog.
- Armor:
	- Add a max armor limit slider (under General Slider Settings) to limit the max thickness of armor. Default: unclamped.
- UI:
	- Team Icon text now scales with icon scale.
- AI:
	- Orbital AI:
		- Adds ability to use controllable sidemounted engines as RCS thrusters.
		- Add toggles to disable use of RCS for translation and rotation.
		- Adds Zero-throttle firing range setting that will override maneuvering orientation in favor of pointing ship in attack Vector direction within set distance.
		- AI now takes target acceleration/velocity into account when accelerating to engagement speed/killing velocity.
		- Adjustments to the hasPropulsion check to properly detect when a vessel no longer has propulsion.
- Detectors / Countermeasures:
	- Allow higher precision for CM intervals and delays in the WM right-click menu.
	- Fix invalid C# syntax in the TWS radar .cfg file.
- Competition:
	- Auto-generated tournaments use the last used world.
	- Fix ramming scoring to also work for orbital AI.
- Game Modes: